--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
+@import url(_slick.css);
+@import url(_slick-theme.css);
+
 html{
   margin: 0;
   border: 0;
@@ -13,12 +16,12 @@ html{
     }
     .slide {
       color: white;
-      height: 200px;
+      height: 300px;
       width: 400px;
       img{
         margin: 0 auto;
         height: 300px;
-        width: 85%;
+        width: 80%;
       }
       h2 {
         position: relative;
@@ -39,18 +42,22 @@ html{
         text-decoration: none;
       }
     }
+    }
+  }
+  div.cta {
+    margin: 0 auto;
     .all-destinations-cta {
-      position: absolute;
-      bottom: 50px;
       margin: 0 auto !important;
       color: black;
       border: 2px solid #edecec;
       padding: 20px;
       text-decoration: none;
     }
-  }
 }
 
+.slick-list {
+  outline: none;
+}
 .slick-current{
   transform: scale(1.3);
   top: -30px;
