--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,3 +1,5 @@
+@import url(_slick.css);
+@import url(_slick-theme.css);
 html {
   margin: 0;
   border: 0;
@@ -12,12 +14,12 @@ html {
       padding: 30px 0 60px; }
     html .carousel-wrapper .slide {
       color: white;
-      height: 200px;
+      height: 300px;
       width: 400px; }
       html .carousel-wrapper .slide img {
         margin: 0 auto;
         height: 300px;
-        width: 85%; }
+        width: 80%; }
       html .carousel-wrapper .slide h2 {
         position: relative;
         top: -180px;
@@ -33,14 +35,18 @@ html {
         top: -100px;
         font-size: 13px;
         text-decoration: none; }
-    html .carousel-wrapper .all-destinations-cta {
-      position: absolute;
-      bottom: 50px;
-      margin: 0 auto !important;
-      color: black;
-      border: 2px solid #edecec;
-      padding: 20px;
-      text-decoration: none; }
+
+div.cta {
+  margin: 0 auto; }
+  div.cta .all-destinations-cta {
+    margin: 0 auto !important;
+    color: black;
+    border: 2px solid #edecec;
+    padding: 20px;
+    text-decoration: none; }
+
+.slick-list {
+  outline: none; }
 
 .slick-current {
   transform: scale(1.3);
