--- a/src/scss/_slick.css
+++ b/src/scss/_slick.css
@@ -27,10 +27,12 @@
 
     margin: 0;
     padding: 0;
+
+    outline: none !important;
 }
 .slick-list:focus
 {
-    outline: none;
+    outline: none !important;
 }
 .slick-list.dragging
 {
