--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -42,29 +42,74 @@ html{
         text-decoration: none;
       }
     }
-    }
-  }
-  div.cta {
-    margin: 0 auto;
     .all-destinations-cta {
       margin: 0 auto !important;
       color: black;
       border: 2px solid #edecec;
       padding: 20px;
       text-decoration: none;
+      position: relative;
+      top: 100px;
     }
+  }
 }
 
-.slick-list {
-  outline: none;
+@media screen and (max-width: 768px) {
+  html {
+    .carousel-wrapper {
+      .slide{
+        img{
+          height: 350px;
+        }
+      }
+      .all-destinations-cta {
+        top: 200px;
+      }
+    }
+  }
 }
+@media screen and (max-width: 320px) {
+  html {
+    padding: 0px;
+    .carousel-wrapper {
+      .carousel-title {
+        font-size: 30px;
+        padding: 20px 0 30px;
+      }
+      .slide{
+        height: 200px;
+        img {
+          height: 230px;
+          width: 80%;
+        }
+        h2 {
+          text-transform: uppercase;
+          font-size: 10px;
+          top: -130px;
+        }
+        p {
+          font-size: 8px;
+          top: -120px;
+          letter-spacing: 1px;
+        }
+        a {
+          font-size: 10px;
+          top: -80px;
+        }
+      }
+      .all-destinations-cta {
+        top: 70px;
+      }
+    }
+  }
+}
+
+
+
 .slick-current{
   transform: scale(1.3);
   top: -30px;
   img{
     height: 50px;
   }
-}
-.slick-prev {
-  color: black !important;
 }
