--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -35,26 +35,48 @@ html {
         top: -100px;
         font-size: 13px;
         text-decoration: none; }
+    html .carousel-wrapper .all-destinations-cta {
+      margin: 0 auto !important;
+      color: black;
+      border: 2px solid #edecec;
+      padding: 20px;
+      text-decoration: none;
+      position: relative;
+      top: 100px; }
 
-div.cta {
-  margin: 0 auto; }
-  div.cta .all-destinations-cta {
-    margin: 0 auto !important;
-    color: black;
-    border: 2px solid #edecec;
-    padding: 20px;
-    text-decoration: none; }
-
-.slick-list {
-  outline: none; }
-
+@media screen and (max-width: 768px) {
+  html .carousel-wrapper .slide img {
+    height: 350px; }
+  html .carousel-wrapper .all-destinations-cta {
+    top: 200px; } }
+@media screen and (max-width: 320px) {
+  html {
+    padding: 0px; }
+    html .carousel-wrapper .carousel-title {
+      font-size: 30px;
+      padding: 20px 0 30px; }
+    html .carousel-wrapper .slide {
+      height: 200px; }
+      html .carousel-wrapper .slide img {
+        height: 230px;
+        width: 80%; }
+      html .carousel-wrapper .slide h2 {
+        text-transform: uppercase;
+        font-size: 10px;
+        top: -130px; }
+      html .carousel-wrapper .slide p {
+        font-size: 8px;
+        top: -120px;
+        letter-spacing: 1px; }
+      html .carousel-wrapper .slide a {
+        font-size: 10px;
+        top: -80px; }
+    html .carousel-wrapper .all-destinations-cta {
+      top: 70px; } }
 .slick-current {
   transform: scale(1.3);
   top: -30px; }
   .slick-current img {
     height: 50px; }
-
-.slick-prev {
-  color: black !important; }
 
 /*# sourceMappingURL=style.css.map */
