--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,5 +1,5 @@
-@import url(_slick.css);
-@import url(_slick-theme.css);
+@import url(./partials/_slick.css);
+@import url(./partials/_slick-theme.css);
 
 html{
   margin: 0;
@@ -68,6 +68,16 @@ html{
     }
   }
 }
+.slick-current{
+  transform: scale(1.3);
+  top: -30px;
+  img{
+    height: 50px;
+  }
+}
+
+// media queries
+
 @media screen and (max-width: 320px) {
   html {
     padding: 0px;
@@ -101,15 +111,5 @@ html{
         top: 70px;
       }
     }
-  }
-}
-
-
-
-.slick-current{
-  transform: scale(1.3);
-  top: -30px;
-  img{
-    height: 50px;
   }
 }
