--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -1,5 +1,5 @@
-@import url(_slick.css);
-@import url(_slick-theme.css);
+@import url(./partials/_slick.css);
+@import url(./partials/_slick-theme.css);
 html {
   margin: 0;
   border: 0;
@@ -49,6 +49,12 @@ html {
     height: 350px; }
   html .carousel-wrapper .all-destinations-cta {
     top: 200px; } }
+.slick-current {
+  transform: scale(1.3);
+  top: -30px; }
+  .slick-current img {
+    height: 50px; }
+
 @media screen and (max-width: 320px) {
   html {
     padding: 0px; }
@@ -73,10 +79,5 @@ html {
         top: -80px; }
     html .carousel-wrapper .all-destinations-cta {
       top: 70px; } }
-.slick-current {
-  transform: scale(1.3);
-  top: -30px; }
-  .slick-current img {
-    height: 50px; }
 
 /*# sourceMappingURL=style.css.map */
