--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,6 +1,7 @@
 @import url(./partials/_slick.css);
 @import url(./partials/_slick-theme.css);
 
+
 html{
   margin: 0;
   border: 0;
@@ -53,7 +54,29 @@ html{
     }
   }
 }
+.slick-current{
+  transform: scale(1.3);
+  top: -30px;
+}
 
+@media screen and (max-width: 1024px) {
+  html {
+    .carousel-wrapper {
+      .carousel-title {
+          padding: 80px 0 150px;
+      }
+      .slide{
+        img{
+          height: 350px;
+          width: 80%
+        }
+      }
+      .all-destinations-cta {
+        top: 350px;
+      }
+    }
+  }
+}
 @media screen and (max-width: 768px) {
   html {
     .carousel-wrapper {
@@ -68,16 +91,65 @@ html{
     }
   }
 }
-.slick-current{
-  transform: scale(1.3);
-  top: -30px;
-  img{
-    height: 50px;
+
+@media screen and (max-width: 411px) {
+  html {
+    padding: 0px;
+    .carousel-wrapper {
+      .carousel-title {
+        font-size: 42px;
+        padding: 30px 0 90px;
+      }
+      .slide{
+        img{
+          height: 230px;
+          width: 80%
+        }
+      }
+      .all-destinations-cta {
+        top: 120px;
+      }
+    }
   }
 }
-
-// media queries
-
+@media screen and (max-width: 375px) {
+  html {
+    .carousel-wrapper {
+      .carousel-title {
+        padding: 30px 0 60px;
+      }
+      .slide{
+        img{
+          height: 230px;
+          width: 80%
+        }
+      }
+      .all-destinations-cta {
+        top: 70px;
+      }
+    }
+  }
+}
+@media screen and (max-width: 360px) {
+  html {
+    padding: 0px;
+    .carousel-wrapper {
+      .carousel-title {
+        font-size: 35px;
+        padding: 30px 0 40px;
+      }
+      .slide{
+        img{
+          height: 210px;
+          width: 80%
+        }
+      }
+      .all-destinations-cta {
+        top: 90px;
+      }
+    }
+  }
+}
 @media screen and (max-width: 320px) {
   html {
     padding: 0px;
