--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -44,17 +44,53 @@ html {
       position: relative;
       top: 100px; }
 
+.slick-current {
+  transform: scale(1.3);
+  top: -30px; }
+
+@media screen and (max-width: 1024px) {
+  html .carousel-wrapper .carousel-title {
+    padding: 80px 0 150px; }
+  html .carousel-wrapper .slide img {
+    height: 350px;
+    width: 80%; }
+  html .carousel-wrapper .all-destinations-cta {
+    top: 350px; } }
 @media screen and (max-width: 768px) {
   html .carousel-wrapper .slide img {
     height: 350px; }
   html .carousel-wrapper .all-destinations-cta {
     top: 200px; } }
-.slick-current {
-  transform: scale(1.3);
-  top: -30px; }
-  .slick-current img {
-    height: 50px; }
-
+@media screen and (max-width: 411px) {
+  html {
+    padding: 0px; }
+    html .carousel-wrapper .carousel-title {
+      font-size: 42px;
+      padding: 30px 0 90px; }
+    html .carousel-wrapper .slide img {
+      height: 230px;
+      width: 80%; }
+    html .carousel-wrapper .all-destinations-cta {
+      top: 120px; } }
+@media screen and (max-width: 375px) {
+  html .carousel-wrapper .carousel-title {
+    padding: 30px 0 60px; }
+  html .carousel-wrapper .slide img {
+    height: 230px;
+    width: 80%; }
+  html .carousel-wrapper .all-destinations-cta {
+    top: 70px; } }
+@media screen and (max-width: 360px) {
+  html {
+    padding: 0px; }
+    html .carousel-wrapper .carousel-title {
+      font-size: 35px;
+      padding: 30px 0 40px; }
+    html .carousel-wrapper .slide img {
+      height: 210px;
+      width: 80%; }
+    html .carousel-wrapper .all-destinations-cta {
+      top: 90px; } }
 @media screen and (max-width: 320px) {
   html {
     padding: 0px; }
